<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_colorTint"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:textSize="15dp"
        android:textAlignment="center"
        android:fontFamily="serif"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textColor="@color/login_color_text_white"
        android:fontFamily="serif"
        android:textSize="12dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/login_color_text_white"
        android:maxLines="1"
        android:hint="Prisijungimo vardas"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_email"
        android:textColor="@color/login_color_text_white"
        android:fontFamily="serif"
        android:textSize="12dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/login_color_text_white"
        android:maxLines="1"
        android:hint="El. Paštas"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/login_color_text_white"
        android:fontFamily="serif"
        android:textSize="12dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Slaptažodis"
        android:maxLines="1"
        android:textColor="@color/login_color_text_white"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"> -->

    <!--android:layout_weight="1"
    android:layout_gravity="left"-->


    <Button
        android:id="@+id/confirm_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_register"
        android:fontFamily="serif"
        android:onClick="btnConfirmRegister"/>

    <!--android:layout_weight="1"
        android:layout_gravity="right"

    </LinearLayout> -->

</LinearLayout>
